{
    "name": "InputSystem",
    "maps": [
        {
            "name": "Player",
            "id": "72a9b92b-be4d-4fc7-8ea3-4e68e30f7ad7",
            "actions": [
                {
                    "name": "Move",
                    "type": "Value",
                    "id": "704b26d5-3b0f-4ae0-8b1d-dfcd7d7739e2",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Run",
                    "type": "Button",
                    "id": "700b9ee0-86c4-4c8d-b2c0-682d6711c6e2",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Jump",
                    "type": "Button",
                    "id": "7e11b862-54a7-44d6-9fd9-245f0d6b6c0a",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Alt",
                    "type": "Button",
                    "id": "9e2655fb-bcd6-473b-b728-461ce00ed027",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Attack",
                    "type": "Button",
                    "id": "e2756020-a1ed-4626-a402-d3ad43cda365",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Look",
                    "type": "Value",
                    "id": "6a621a86-732f-4f4a-8695-a1950f1f0ce3",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Zoom",
                    "type": "Value",
                    "id": "d5b3dee6-9460-4be2-9629-b9bbe48d4fb9",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                },
                {
                    "name": "Aim",
                    "type": "Button",
                    "id": "f5ca58b6-b546-4b4e-8cce-d48ee59e33e7",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Reload",
                    "type": "Button",
                    "id": "47aefd52-234d-4c06-9678-8bef48db8510",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "WeaponSwap",
                    "type": "Button",
                    "id": "39bf3fe4-10c8-45b9-b3db-0eadb0730c7e",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Cover",
                    "type": "Button",
                    "id": "24d80dd0-555a-4a5c-8d01-ee1c2faa7367",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "Action",
                    "type": "Button",
                    "id": "85bd3891-bbe2-4102-9eac-5eecd62031ac",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "SpecialSkill",
                    "type": "Button",
                    "id": "72e9096c-9220-45ef-9c0f-22f1d27e26d8",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "NormalSkill",
                    "type": "Button",
                    "id": "ad8b79e6-05e4-4a32-ac24-7c3895472122",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                },
                {
                    "name": "EXSkill",
                    "type": "Button",
                    "id": "653e5df5-ef79-4fd1-8c9a-1b0c36f44697",
                    "expectedControlType": "Button",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": false
                }
            ],
            "bindings": [
                {
                    "name": "WASD",
                    "id": "4ec2a761-c285-43d5-bae3-58ea0d4f8817",
                    "path": "2DVector",
                    "interactions": "",
                    "processors": "",
                    "groups": "",
                    "action": "Move",
                    "isComposite": true,
                    "isPartOfComposite": false
                },
                {
                    "name": "up",
                    "id": "de42c641-40ff-449d-bc48-e91508f23184",
                    "path": "<Keyboard>/w",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "down",
                    "id": "70575f4e-d5db-4dec-89dc-f201aa140401",
                    "path": "<Keyboard>/s",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "left",
                    "id": "3902a859-b6ff-4193-8953-36e33f53b3ec",
                    "path": "<Keyboard>/a",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "right",
                    "id": "5767c2f5-ce5a-4d9a-a0a2-adf731109f4f",
                    "path": "<Keyboard>/d",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Move",
                    "isComposite": false,
                    "isPartOfComposite": true
                },
                {
                    "name": "",
                    "id": "75dd761c-9241-43e8-bf5e-2060b2042afe",
                    "path": "<Mouse>/leftButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Attack",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "8dd674b2-b485-4987-8a39-3a487e7f2d64",
                    "path": "<Mouse>/rightButton",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Aim",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "2ae5cec5-4aa8-4feb-a4b6-c8d6ff46fa1b",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Reload",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "08fdd117-dd07-452d-a80a-6d8fa0db3773",
                    "path": "<Keyboard>/1",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "WeaponSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e67dcdce-a5ad-4d3b-9d85-2d7c37c9e549",
                    "path": "<Keyboard>/2",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "WeaponSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "205432da-aba4-48ce-9244-f711f60fd517",
                    "path": "<Keyboard>/3",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "WeaponSwap",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "64b75854-160d-4d2d-8342-54cb72b0d037",
                    "path": "<Keyboard>/f",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Action",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "e62634bd-fc06-49e7-ba56-677f991f9e93",
                    "path": "<Keyboard>/shift",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Run",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "25827f61-0f94-4baf-a987-a3a0a32c9aed",
                    "path": "<Keyboard>/space",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Jump",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "66cd7f05-5de4-4622-b054-0a67b0de7e1a",
                    "path": "<Keyboard>/alt",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Alt",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3a5bf21e-c469-4411-9301-22c622f4c41d",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Look",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d25ceba-8403-4cee-aaea-669952291d66",
                    "path": "<Mouse>/scroll",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Zoom",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "161e8317-56ef-49bc-a852-89ba1e12ec8a",
                    "path": "<Keyboard>/e",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "NormalSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "76bd4787-8704-4778-af94-d4a155414fd8",
                    "path": "<Keyboard>/r",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "EXSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "3d4a192c-19df-4db0-b7de-dd386f4a36ab",
                    "path": "<Keyboard>/q",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "SpecialSkill",
                    "isComposite": false,
                    "isPartOfComposite": false
                },
                {
                    "name": "",
                    "id": "6e66f24d-3fb2-4f56-9870-73dfeebd3a1a",
                    "path": "<Keyboard>/c",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "Cover",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        },
        {
            "name": "Camera",
            "id": "95776a44-e370-4c19-a6c7-4723c3f12b22",
            "actions": [
                {
                    "name": "LookAround",
                    "type": "PassThrough",
                    "id": "702718ab-69ca-486c-87b6-d873bec69a87",
                    "expectedControlType": "Vector2",
                    "processors": "",
                    "interactions": "",
                    "initialStateCheck": true
                }
            ],
            "bindings": [
                {
                    "name": "",
                    "id": "84e40826-6dfc-4265-8b5a-492e56ef2292",
                    "path": "<Mouse>/delta",
                    "interactions": "",
                    "processors": "",
                    "groups": "PC",
                    "action": "LookAround",
                    "isComposite": false,
                    "isPartOfComposite": false
                }
            ]
        }
    ],
    "controlSchemes": [
        {
            "name": "PC",
            "bindingGroup": "PC",
            "devices": [
                {
                    "devicePath": "<Keyboard>",
                    "isOptional": false,
                    "isOR": false
                },
                {
                    "devicePath": "<Mouse>",
                    "isOptional": false,
                    "isOR": false
                }
            ]
        }
    ]
}